--- a/Plantilla.html
+++ b/Plantilla.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <title>F1 Desktop</title>
     <meta name="author" content="Javier Sanabria Miranda"/>
-    <meta name="description" content="Página principal de F1 Desktop"/>
+    <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -16,7 +16,7 @@
 <body>
     <!-- Datos con el contenido que aparece en el navegador -->
     <h1>F1 Desktop</h1>
-    <p>En desarrollo</p>
+    <p> </p>
 </body>
 
 </html>
