--- a/meteorologia.html
+++ b/meteorologia.html
@@ -4,9 +4,9 @@
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
-    <title>F1 Desktop</title>
+    <title>Meteorología</title>
     <meta name="author" content="Javier Sanabria Miranda"/>
-    <meta name="description" content="Página principal de F1 Desktop"/>
+    <meta name="description" content="Meteorología prevista para las carreras"/>
     <meta name="keywords" content=""/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -16,6 +16,7 @@
 <body>
     <!-- Datos con el contenido que aparece en el navegador -->
     <h1>F1 Desktop</h1>
+    <h2>Meteorología</h2>
     <p>En desarrollo</p>
 </body>
 
