Introducción de la Navegacion y Keywords en los metadatos de los htmls

--- a/juegos.html
+++ b/juegos.html
@@ -7,7 +7,7 @@
     <title>Juegos</title>
     <meta name="author" content="Javier Sanabria Miranda"/>
     <meta name="description" content="Juegos de F1"/>
-    <meta name="keywords" content=""/>
+    <meta name="keywords" content="F1 Desktop"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <link rel="stylesheet" type="text/css" href="estilo.css" />
