--- a/piloto.html
+++ b/piloto.html
@@ -7,7 +7,7 @@
     <title>Valtteri Bottas</title>
     <meta name="author" content="Javier Sanabria Miranda"/>
     <meta name="description" content="Página de Información acerca de Valtteri Bottas"/>
-    <meta name="keywords" content=""/>
+    <meta name="keywords" content="F1 Desktop, Valtteri Bottas"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <link rel="stylesheet" type="text/css" href="estilo.css" />
