--- a/meteorologia.html
+++ b/meteorologia.html
@@ -7,7 +7,7 @@
     <title>Meteorología</title>
     <meta name="author" content="Javier Sanabria Miranda"/>
     <meta name="description" content="Meteorología prevista para las carreras"/>
-    <meta name="keywords" content=""/>
+    <meta name="keywords" content="F1 Desktop"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <link rel="stylesheet" type="text/css" href="estilo.css" />
