--- a/noticias.html
+++ b/noticias.html
@@ -7,7 +7,7 @@
     <title>Noticias</title>
     <meta name="author" content="Javier Sanabria Miranda"/>
     <meta name="description" content="Noticias de actualidad sobre F1"/>
-    <meta name="keywords" content=""/>
+    <meta name="keywords" content="F1 Desktop"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <link rel="stylesheet" type="text/css" href="estilo.css" />
