--- a/viajes.html
+++ b/viajes.html
@@ -4,10 +4,10 @@
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
-    <title>F1 Desktop</title>
+    <title>Viajes</title>
     <meta name="author" content="Javier Sanabria Miranda"/>
-    <meta name="description" content=""/>
-    <meta name="keywords" content=""/>
+    <meta name="description" content="Viajes planificados para la F1"/>
+    <meta name="keywords" content="F1 Desktop"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <link rel="stylesheet" type="text/css" href="estilo.css" />
@@ -16,7 +16,8 @@
 <body>
     <!-- Datos con el contenido que aparece en el navegador -->
     <h1>F1 Desktop</h1>
-    <p> </p>
+    <h2>Viajes</h2>
+    <p>En desarrollo</p>
 </body>
 
 </html>
