--- a/calendario.html
+++ b/calendario.html
@@ -16,6 +16,16 @@
 <body>
     <!-- Datos con el contenido que aparece en el navegador -->
     <h1>F1 Desktop</h1>
+    <nav>
+        <a href="index.html" title="Inicio">Inicio</a>
+        <a href="piloto.html" title="Piloto">Piloto</a>
+        <a href="noticias.html" title="Noticias">Noticias</a>
+        <a href="calendario.html" title="Calendario">Calendario</a>
+        <a href="meteorologia.html" title="Meteorología">Meteorología</a>
+        <a href="circuito.html" title="Circuitos">Circuitos</a>
+        <a href="viajes.html" title="Viajes">Viajes</a>
+        <a href="juegos.html" title="Juegos">Juegos</a>
+    </nav>
     <h2>Calendario de Carreras</h2>
     <p>En desarrollo</p>
 </body>
