--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="F1 Desktop"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <link rel="stylesheet" type="text/css" href="estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
 </head>
 
 <body>
@@ -26,7 +26,7 @@
         <a href="viajes.html" title="Viajes">Viajes</a>
         <a href="juegos.html" title="Juegos">Juegos</a>
     </nav>
-
+    <h2>Inicio</h2>
     <p>En desarrollo</p>
 </body>
 
