Introducción de Información del Piloto

--- a/piloto.html
+++ b/piloto.html
@@ -28,7 +28,18 @@
     </nav>
     <h2>Valtteri Bottas</h2>
 
-    <p>En desarrollo</p>
+    <h3>Datos Personales</h3>
+    <p>Nombre Completo: Valtteri Viktor Bottas</p>
+    <p>Dorsal: 77</p>
+    <p>País de Nacimiento: Finlandia</p>
+    <p>Fecha de Nacimienot: 28/08/1989</p>
+
+    <h3>Presentación</h3>
+    <p>Aprendió su oficio en las carreteras finlandesas de hielo y nieve y nació para ser corredor de Grand Prix.</p>
+    <p>Bottas debutó en la F1 con Williams en 2013 y pronto se convirtió en parte de la familia. Los puntos y los podios siguieron, 
+        y el confiable piloto incluso acumuló la mayor cantidad de puntos sin una victoria, un récord que le molestaba pero que 
+        demostraba su habilidad. El hecho de que el finlandés fuera una máquina de sumar puntos lo llevó de repente a ascender al 
+        asiento más codiciado de la F1: el asiento vacante de Nico Rosberg en Mercedes.</p>
 </body>
 
 </html>
