Introducción de Información del Piloto (Aficiones, Escuderías, Conceptos de F1 y Resultados importantes)

--- a/piloto.html
+++ b/piloto.html
@@ -40,6 +40,76 @@
         y el confiable piloto incluso acumuló la mayor cantidad de puntos sin una victoria, un récord que le molestaba pero que 
         demostraba su habilidad. El hecho de que el finlandés fuera una máquina de sumar puntos lo llevó de repente a ascender al 
         asiento más codiciado de la F1: el asiento vacante de Nico Rosberg en Mercedes.</p>
+
+    <h3>Aficiones</h3>
+    <ul>
+        <li>Hockey</li>
+        <li>Gravel</li>
+        <li>Running</li>
+        <li>Emprendimiento</li>
+        <li>Cocina</li>
+    </ul>
+
+    <h3>Escuderías</h3>
+    <ol>
+        <li>Williams</li>
+        <li>Mercedes</li>
+        <li>Alfa Romeo</li>
+        <li>Kick Sauber</li>
+    </ol>
+
+    <h3>Conceptos de F1</h3>
+    <dl>
+        <dt>Pit Stop</dt>
+            <dd>
+                Parada que realiza un coche durante una carrera para recibir servicios como cambio de neumáticos, 
+                repostaje de combustible (en algunas categorías), ajustes mecánicos o reparaciones
+            </dd>
+        <dt>Pole</dt>
+            <dd>
+                Posición de salida más favorable en una carrera de automovilismo, obtenida durante la clasificación. 
+                El piloto que consigue la "pole position" tiene el privilegio de iniciar la carrera desde la primera 
+                posición en la parrilla
+            </dd>
+        <dt>Efecto Suelo</dt>
+            <dd>
+                Fenómeno aerodinámico que ocurre cuando un vehículo, como un coche de carreras, se acerca al suelo. 
+                Al disminuir la distancia entre el vehículo y la superficie, se genera un aumento en la presión del aire 
+                debajo del coche, lo que produce un efecto de succión que aumenta la carga aerodinámica y mejora la adherencia 
+                de los neumáticos al asfalto
+            </dd>
+        <dt>DRS (Drag Reduction System)</dt>
+            <dd>
+                Sistema que permite a los pilotos ajustar el alerón trasero del coche para reducir la resistencia aerodinámica 
+                en ciertas condiciones. Esto facilita los adelantamientos al aumentar la velocidad en rectas, pero solo se 
+                puede usar en zonas específicas de la pista y bajo ciertas condiciones.
+            </dd>
+        <dt>Safety Car</dt>
+            <dd>
+                Coche que entra en pista para controlar la carrera en situaciones de peligro, como accidentes o condiciones 
+                climáticas adversas. Su presencia obliga a los pilotos a mantener una velocidad reducida y seguir al coche 
+                de seguridad, lo que agrupa el pelotón y permite limpiar la pista antes de reanudar la carrera.
+            </dd>
+    </dl>
+
+    <h3>Resultados Destacados de los Últimos 3 Años</h3>
+    <ul>
+        <li>2021</li>
+            <ul>
+                <li>3er lugar en el Campeonato Mundial de Pilotos</li>
+                <li>Victoria en el Gran Premio de Turquía</li>
+                <li>Pole en el Gran Premio de Portugal</li>
+            </ul>
+        <li>2022</li>
+            <ul>
+                <li>4to lugar en el Capeonato del Mundo de Pilotos</li>
+                <li>Podia en el Granf Premio de Canadá (3er lugar)</li>
+            </ul>
+        <li>2023</li>
+            <ul>
+                <li>10º lugar en el Campeonato Mundial de Pilotos</li>
+            </ul>
+    </ul>
 </body>
 
 </html>
