--- a/piloto.html
+++ b/piloto.html
@@ -110,6 +110,26 @@
                 <li>10º lugar en el Campeonato Mundial de Pilotos</li>
             </ul>
     </ul>
+
+    <table>
+        <caption>Resultados Temporada 2023</caption>
+        <tr>
+            <th>Temporada</td>
+            <th scope="col" id="Posición">Posición</th>
+            <th scope="col" id="Puntos">Puntos</th>
+            <th scope="col" id="Poles">Poles</th>
+            <th scope="col" id="Victorias">Victorias</th>
+            <th scope="col" id="Podios">Podios</th>
+        </tr>
+        <tr>
+            <th scope="row" id="2023" headers="Temporada">2023</th>
+            <td header="2023 Posicion">15</td>
+            <td header="2023 Puntos">10</td>
+            <td header="2023 Poles">0</td>
+            <td header="2023 Victorias">0</td>
+            <td header="2023 Podios">0</td>
+        </tr>
+    </table>
 </body>
 
 </html>
