Corrección de Fallo de Llaves en Tabla

--- a/piloto.html
+++ b/piloto.html
@@ -120,7 +120,7 @@
     <table>
         <caption>Resultados Temporada 2023</caption>
         <tr>
-            <th>Temporada</td>
+            <th>Temporada</th>
             <th scope="col" id="Posición">Posición</th>
             <th scope="col" id="Puntos">Puntos</th>
             <th scope="col" id="Poles">Poles</th>
