Corrección de errores HTML5 en la tabla

--- a/piloto.html
+++ b/piloto.html
@@ -120,7 +120,7 @@
     <table>
         <caption>Resultados Temporada 2023</caption>
         <tr>
-            <th>Temporada</th>
+            <th scope="col" id="Temporada">Temporada</th>
             <th scope="col" id="Posición">Posición</th>
             <th scope="col" id="Puntos">Puntos</th>
             <th scope="col" id="Poles">Poles</th>
@@ -129,11 +129,11 @@
         </tr>
         <tr>
             <th scope="row" id="2023" headers="Temporada">2023</th>
-            <td header="2023 Posicion">15</td>
-            <td header="2023 Puntos">10</td>
-            <td header="2023 Poles">0</td>
-            <td header="2023 Victorias">0</td>
-            <td header="2023 Podios">0</td>
+            <td headers="2023 Posición">15</td>
+            <td headers="2023 Puntos">10</td>
+            <td headers="2023 Poles">0</td>
+            <td headers="2023 Victorias">0</td>
+            <td headers="2023 Podios">0</td>
         </tr>
     </table>
 </body>
