Adición de Título 3 en el apartado de la tabla

--- a/piloto.html
+++ b/piloto.html
@@ -117,6 +117,8 @@
         </li>
     </ul>
 
+    <h3>Tabla de Resultados Temporada 2023</h3>
+
     <table>
         <caption>Resultados Temporada 2023</caption>
         <tr>
