--- a/piloto.html
+++ b/piloto.html
@@ -138,6 +138,10 @@
             <td headers="2023 Podios">0</td>
         </tr>
     </table>
+
+    <h3>Referencias Externas</h3>
+    <a href="https://www.formula1.com/" title="Formula1.com">Formula1.com</a>
+    <a href="https://www.dazn.com/es-ES/competition/Competition:1m5x4n07f2kqkiczebja5etiq" title="DAZN">DAZN</a>
 </body>
 
 </html>
