Introducción de Archivos Multimedia

--- a/piloto.html
+++ b/piloto.html
@@ -142,6 +142,15 @@
     <h3>Referencias Externas</h3>
     <a href="https://www.formula1.com/" title="Formula1.com">Formula1.com</a>
     <a href="https://www.dazn.com/es-ES/competition/Competition:1m5x4n07f2kqkiczebja5etiq" title="DAZN">DAZN</a>
+
+    <h3>Contenido Multimedia</h3>
+    <img src="multimedia/imagenes/FotoBottas.jpg" alt="Imagen Valtteri Bottas" title="Imagen Valtteri Bottas" width="458" height="317"/>
+    
+    <video src="multimedia/videos/Valtteri_Bottas_Best_Moments_With_Mercedes.mp4" controls preload="auto" 
+        title="Valtteri Bottas' Best Moments With Mercedes" width="500" height="317"></video>
+    
+    <audio src="multimedia/audios/Valtteri_Bottas_told_on_radio_not_to_go_for_the_fastest_lap.mp3" 
+        title="Valtteri Bottas told on radio not to go for the fastest lap" controls></audio>
 </body>
 
 </html>
