Añade las etiquetas <section> que segmenta el html por partes

--- a/piloto.html
+++ b/piloto.html
@@ -5,11 +5,11 @@
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
     <title>Valtteri Bottas</title>
-    <meta name="author" content="Javier Sanabria Miranda"/>
-    <meta name="description" content="Página de Información acerca de Valtteri Bottas"/>
+    <meta name="author" content="Javier Sanabria Miranda" />
+    <meta name="description" content="Página de Información acerca de Valtteri Bottas" />
     <meta name="keywords" content="F1 Desktop, Valtteri Bottas, Datos Personales, Presentación, Aficiones,
-                                    Escuderías, Conceptos F1, Resultados Destacados, Multimedia"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+                                    Escuderías, Conceptos F1, Resultados Destacados, Multimedia" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
 </head>
@@ -29,129 +29,161 @@
     </nav>
     <h2>Valtteri Bottas</h2>
 
-    <h3>Datos Personales</h3>
-    <p>Nombre Completo: Valtteri Viktor Bottas</p>
-    <p>Dorsal: 77</p>
-    <p>País de Nacimiento: Finlandia</p>
-    <p>Fecha de Nacimienot: 28/08/1989</p>
+    <section>
+        <h3>Datos Personales</h3>
+        <p>Nombre Completo: Valtteri Viktor Bottas</p>
+        <p>Dorsal: 77</p>
+        <p>País de Nacimiento: Finlandia</p>
+        <p>Fecha de Nacimienot: 28/08/1989</p>
+    </section>
 
-    <h3>Presentación</h3>
-    <p>Aprendió su oficio en las carreteras finlandesas de hielo y nieve y nació para ser corredor de Grand Prix.</p>
-    <p>Bottas debutó en la F1 con Williams en 2013 y pronto se convirtió en parte de la familia. Los puntos y los podios siguieron, 
-        y el confiable piloto incluso acumuló la mayor cantidad de puntos sin una victoria, un récord que le molestaba pero que 
-        demostraba su habilidad. El hecho de que el finlandés fuera una máquina de sumar puntos lo llevó de repente a ascender al 
-        asiento más codiciado de la F1: el asiento vacante de Nico Rosberg en Mercedes.</p>
+    <section>
+        <h3>Presentación</h3>
+        <p>Aprendió su oficio en las carreteras finlandesas de hielo y nieve y nació para ser corredor de Grand Prix.
+        </p>
+        <p>Bottas debutó en la F1 con Williams en 2013 y pronto se convirtió en parte de la familia. Los puntos y los
+            podios
+            siguieron,
+            y el confiable piloto incluso acumuló la mayor cantidad de puntos sin una victoria, un récord que le
+            molestaba
+            pero que
+            demostraba su habilidad. El hecho de que el finlandés fuera una máquina de sumar puntos lo llevó de repente
+            a
+            ascender al
+            asiento más codiciado de la F1: el asiento vacante de Nico Rosberg en Mercedes.</p>
+    </section>
 
-    <h3>Aficiones</h3>
-    <ul>
-        <li>Hockey</li>
-        <li>Gravel</li>
-        <li>Running</li>
-        <li>Emprendimiento</li>
-        <li>Cocina</li>
-    </ul>
+    <section>
+        <h3>Aficiones</h3>
+        <ul>
+            <li>Hockey</li>
+            <li>Gravel</li>
+            <li>Running</li>
+            <li>Emprendimiento</li>
+            <li>Cocina</li>
+        </ul>
+    </section>
 
-    <h3>Escuderías</h3>
-    <ol>
-        <li>Williams</li>
-        <li>Mercedes</li>
-        <li>Alfa Romeo</li>
-        <li>Kick Sauber</li>
-    </ol>
+    <section>
+        <h3>Escuderías</h3>
+        <ol>
+            <li>Williams</li>
+            <li>Mercedes</li>
+            <li>Alfa Romeo</li>
+            <li>Kick Sauber</li>
+        </ol>
+    </section>
 
-    <h3>Conceptos de F1</h3>
-    <dl>
-        <dt>Pit Stop</dt>
+    <section>
+        <h3>Conceptos de F1</h3>
+        <dl>
+            <dt>Pit Stop</dt>
             <dd>
-                Parada que realiza un coche durante una carrera para recibir servicios como cambio de neumáticos, 
+                Parada que realiza un coche durante una carrera para recibir servicios como cambio de neumáticos,
                 repostaje de combustible (en algunas categorías), ajustes mecánicos o reparaciones
             </dd>
-        <dt>Pole</dt>
+            <dt>Pole</dt>
             <dd>
-                Posición de salida más favorable en una carrera de automovilismo, obtenida durante la clasificación. 
-                El piloto que consigue la "pole position" tiene el privilegio de iniciar la carrera desde la primera 
+                Posición de salida más favorable en una carrera de automovilismo, obtenida durante la clasificación.
+                El piloto que consigue la "pole position" tiene el privilegio de iniciar la carrera desde la primera
                 posición en la parrilla
             </dd>
-        <dt>Efecto Suelo</dt>
+            <dt>Efecto Suelo</dt>
             <dd>
-                Fenómeno aerodinámico que ocurre cuando un vehículo, como un coche de carreras, se acerca al suelo. 
-                Al disminuir la distancia entre el vehículo y la superficie, se genera un aumento en la presión del aire 
-                debajo del coche, lo que produce un efecto de succión que aumenta la carga aerodinámica y mejora la adherencia 
+                Fenómeno aerodinámico que ocurre cuando un vehículo, como un coche de carreras, se acerca al suelo.
+                Al disminuir la distancia entre el vehículo y la superficie, se genera un aumento en la presión del aire
+                debajo del coche, lo que produce un efecto de succión que aumenta la carga aerodinámica y mejora la
+                adherencia
                 de los neumáticos al asfalto
             </dd>
-        <dt>DRS (Drag Reduction System)</dt>
+            <dt>DRS (Drag Reduction System)</dt>
             <dd>
-                Sistema que permite a los pilotos ajustar el alerón trasero del coche para reducir la resistencia aerodinámica 
-                en ciertas condiciones. Esto facilita los adelantamientos al aumentar la velocidad en rectas, pero solo se 
+                Sistema que permite a los pilotos ajustar el alerón trasero del coche para reducir la resistencia
+                aerodinámica
+                en ciertas condiciones. Esto facilita los adelantamientos al aumentar la velocidad en rectas, pero solo
+                se
                 puede usar en zonas específicas de la pista y bajo ciertas condiciones.
             </dd>
-        <dt>Safety Car</dt>
+            <dt>Safety Car</dt>
             <dd>
-                Coche que entra en pista para controlar la carrera en situaciones de peligro, como accidentes o condiciones 
-                climáticas adversas. Su presencia obliga a los pilotos a mantener una velocidad reducida y seguir al coche 
+                Coche que entra en pista para controlar la carrera en situaciones de peligro, como accidentes o
+                condiciones
+                climáticas adversas. Su presencia obliga a los pilotos a mantener una velocidad reducida y seguir al
+                coche
                 de seguridad, lo que agrupa el pelotón y permite limpiar la pista antes de reanudar la carrera.
             </dd>
-    </dl>
+        </dl>
+    </section>
 
-    <h3>Resultados Destacados de los Últimos 3 Años</h3>
-    <ul>
-        <li>
-            2021
-            <ul>
-                <li>3er lugar en el Campeonato Mundial de Pilotos</li>
-                <li>Victoria en el Gran Premio de Turquía</li>
-                <li>Pole en el Gran Premio de Portugal</li>
-            </ul>
-        </li>
-        <li>
-            2022
-            <ul>
-                <li>4to lugar en el Capeonato del Mundo de Pilotos</li>
-                <li>Podia en el Granf Premio de Canadá (3er lugar)</li>
-            </ul>
-        </li>
-        <li>
-            2023
-            <ul>
-                <li>10º lugar en el Campeonato Mundial de Pilotos</li>
-            </ul>
-        </li>
-    </ul>
+    <section>
+        <h3>Resultados Destacados de los Últimos 3 Años</h3>
+        <ul>
+            <li>
+                2021
+                <ul>
+                    <li>3er lugar en el Campeonato Mundial de Pilotos</li>
+                    <li>Victoria en el Gran Premio de Turquía</li>
+                    <li>Pole en el Gran Premio de Portugal</li>
+                </ul>
+            </li>
+            <li>
+                2022
+                <ul>
+                    <li>4to lugar en el Capeonato del Mundo de Pilotos</li>
+                    <li>Podia en el Granf Premio de Canadá (3er lugar)</li>
+                </ul>
+            </li>
+            <li>
+                2023
+                <ul>
+                    <li>10º lugar en el Campeonato Mundial de Pilotos</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
 
-    <h3>Tabla de Resultados Temporada 2023</h3>
+    <section>
+        <h3>Tabla de Resultados Temporada 2023</h3>
 
-    <table>
-        <caption>Resultados Temporada 2023</caption>
-        <tr>
-            <th scope="col" id="Temporada">Temporada</th>
-            <th scope="col" id="Posición">Posición</th>
-            <th scope="col" id="Puntos">Puntos</th>
-            <th scope="col" id="Poles">Poles</th>
-            <th scope="col" id="Victorias">Victorias</th>
-            <th scope="col" id="Podios">Podios</th>
-        </tr>
-        <tr>
-            <th scope="row" id="2023" headers="Temporada">2023</th>
-            <td headers="2023 Posición">15</td>
-            <td headers="2023 Puntos">10</td>
-            <td headers="2023 Poles">0</td>
-            <td headers="2023 Victorias">0</td>
-            <td headers="2023 Podios">0</td>
-        </tr>
-    </table>
+        <table>
+            <caption>Resultados Temporada 2023</caption>
+            <tr>
+                <th scope="col" id="Temporada">Temporada</th>
+                <th scope="col" id="Posición">Posición</th>
+                <th scope="col" id="Puntos">Puntos</th>
+                <th scope="col" id="Poles">Poles</th>
+                <th scope="col" id="Victorias">Victorias</th>
+                <th scope="col" id="Podios">Podios</th>
+            </tr>
+            <tr>
+                <th scope="row" id="2023" headers="Temporada">2023</th>
+                <td headers="2023 Posición">15</td>
+                <td headers="2023 Puntos">10</td>
+                <td headers="2023 Poles">0</td>
+                <td headers="2023 Victorias">0</td>
+                <td headers="2023 Podios">0</td>
+            </tr>
+        </table>
+    </section>
 
-    <h3>Referencias Externas</h3>
-    <a href="https://www.formula1.com/" title="Formula1.com">Formula1.com</a>
-    <a href="https://www.dazn.com/es-ES/competition/Competition:1m5x4n07f2kqkiczebja5etiq" title="DAZN">DAZN</a>
+    <section>
+        <h3>Referencias Externas</h3>
+        <a href="https://www.formula1.com/" title="Formula1.com">Formula1.com</a>
+        <a href="https://www.dazn.com/es-ES/competition/Competition:1m5x4n07f2kqkiczebja5etiq" title="DAZN">DAZN</a>
+    </section>
 
-    <h3>Contenido Multimedia</h3>
-    <img src="multimedia/imagenes/FotoBottas.jpg" alt="Imagen Valtteri Bottas" title="Imagen Valtteri Bottas" width="458" height="317"/>
-    
-    <video src="multimedia/videos/Valtteri_Bottas_Best_Moments_With_Mercedes.mp4" controls preload="auto" 
-        title="Valtteri Bottas' Best Moments With Mercedes" width="500" height="317"></video>
-    
-    <audio src="multimedia/audios/Valtteri_Bottas_told_on_radio_not_to_go_for_the_fastest_lap.mp3" 
-        title="Valtteri Bottas told on radio not to go for the fastest lap" controls></audio>
+    <section>
+        <h3>Contenido Multimedia</h3>
+        <img src="multimedia/imagenes/FotoBottas.jpg" alt="Imagen Valtteri Bottas" title="Imagen Valtteri Bottas"
+            width="458" height="317" />
+
+        <video src="multimedia/videos/Valtteri_Bottas_Best_Moments_With_Mercedes.mp4" controls preload="auto"
+            title="Valtteri Bottas' Best Moments With Mercedes" width="500" height="317"></video>
+
+        <audio src="multimedia/audios/Valtteri_Bottas_told_on_radio_not_to_go_for_the_fastest_lap.mp3"
+            title="Valtteri Bottas told on radio not to go for the fastest lap" controls></audio>
+    </section>
+
 </body>
 
 </html>
