Mejoras en el uso de Contenido Multimedia para hacerlo responsive y especificar su tipo

--- a/piloto.html
+++ b/piloto.html
@@ -178,14 +178,22 @@
 
     <section>
         <h3>Contenido Multimedia</h3>
-        <img src="multimedia/imagenes/FotoBottas.jpg" alt="Imagen Valtteri Bottas" title="Imagen Valtteri Bottas"
-            width="458" height="317" />
+        <picture>
+            <source media="(max-width:799px)" srcset="multimedia/imagenes/FotoBottas-200w.png">
+            <source media="(min-width:800px)" srcset="multimedia/imagenes/FotoBottas-412w.png">
+            <img src="multimedia/imagenes/FotoBottas.jpg" alt="Imagen Valtteri Bottas"
+                title="Imagen Valtteri Bottas"/>
+        </picture>
+        
+        <video controls>
+        <source src="multimedia/videos/Valtteri_Bottas_Best_Moments_With_Mercedes.mp4"
+           type="video/mp4" title="Valtteri Bottas' Best Moments With Mercedes">
+        </video>
 
-        <video src="multimedia/videos/Valtteri_Bottas_Best_Moments_With_Mercedes.mp4" controls preload="auto"
-            title="Valtteri Bottas' Best Moments With Mercedes" width="500" height="317"></video>
-
-        <audio src="multimedia/audios/Valtteri_Bottas_told_on_radio_not_to_go_for_the_fastest_lap.mp3"
-            title="Valtteri Bottas told on radio not to go for the fastest lap" controls></audio>
+        <audio controls>
+            <source src="multimedia/audios/Valtteri_Bottas_told_on_radio_not_to_go_for_the_fastest_lap.mp3"
+                type="audio/mpeg" title="Valtteri Bottas told on radio not to go for the fastest lap">
+        </audio>
     </section>
 
 </body>
