Adición de Nueva Imagen para Adaptabilidad a Dispositivos Móviles

--- a/piloto.html
+++ b/piloto.html
@@ -34,7 +34,7 @@
         <p>Nombre Completo: Valtteri Viktor Bottas</p>
         <p>Dorsal: 77</p>
         <p>País de Nacimiento: Finlandia</p>
-        <p>Fecha de Nacimienot: 28/08/1989</p>
+        <p>Fecha de Nacimiento: 28/08/1989</p>
     </section>
 
     <section>
