Mejora de la Estructura Semántica de piloto.html

--- a/piloto.html
+++ b/piloto.html
@@ -17,6 +17,7 @@
 
 <body>
     <!-- Datos con el contenido que aparece en el navegador -->
+     <header>
     <h1>F1 Desktop</h1>
     <nav>
         <a href="index.html" title="Inicio">Inicio</a>
@@ -28,8 +29,10 @@
         <a href="viajes.html" title="Viajes">Viajes</a>
         <a href="juegos.html" title="Juegos">Juegos</a>
     </nav>
+     </header>
     <h2>Valtteri Bottas</h2>
 
+    <main>
     <section>
         <h3>Datos Personales</h3>
         <p>Nombre Completo: Valtteri Viktor Bottas</p>
@@ -83,8 +86,8 @@
             <li>Kick Sauber</li>
         </ol>
     </section>
-
-    <section>
+    </main>
+    <aside>
         <h3>Conceptos de F1</h3>
         <dl>
             <dt>Pit Stop</dt>
@@ -123,8 +126,9 @@
                 de seguridad, lo que agrupa el pelotón y permite limpiar la pista antes de reanudar la carrera.
             </dd>
         </dl>
-    </section>
+    </aside>
 
+    <main>
     <section>
         <h3>Resultados Destacados de los Últimos 3 Años</h3>
         <ul>
@@ -175,8 +179,9 @@
             </tr>
         </table>
     </section>
+    </main>
 
-    <section>
+    <aside>
         <h3>Referencias Externas</h3>
         <p>
             <a href="https://www.formula1.com/" title="Formula1.com">Formula1.com</a>
@@ -184,7 +189,8 @@
         <p>
             <a href="https://www.dazn.com/es-ES/competition/Competition:1m5x4n07f2kqkiczebja5etiq" title="DAZN">DAZN</a>
         </p>
-    </section>
+    </aside>
+
 
     <section>
         <h3>Contenido Multimedia</h3>
