--- a/piloto.html
+++ b/piloto.html
@@ -17,75 +17,79 @@
 
 <body>
     <!-- Datos con el contenido que aparece en el navegador -->
-     <header>
-    <h1>F1 Desktop</h1>
-    <nav>
-        <a href="index.html" title="Inicio">Inicio</a>
-        <a href="piloto.html" title="Piloto">Piloto</a>
-        <a href="noticias.html" title="Noticias">Noticias</a>
-        <a href="calendario.html" title="Calendario">Calendario</a>
-        <a href="meteorologia.html" title="Meteorología">Meteorología</a>
-        <a href="circuito.html" title="Circuitos">Circuitos</a>
-        <a href="viajes.html" title="Viajes">Viajes</a>
-        <a href="juegos.html" title="Juegos">Juegos</a>
-    </nav>
-     </header>
+    <header>
+        <h1>F1 Desktop</h1>
+        <nav>
+            <a href="index.html" title="Inicio">Inicio</a>
+            <a href="piloto.html" title="Piloto">Piloto</a>
+            <a href="noticias.html" title="Noticias">Noticias</a>
+            <a href="calendario.html" title="Calendario">Calendario</a>
+            <a href="meteorologia.html" title="Meteorología">Meteorología</a>
+            <a href="circuito.html" title="Circuitos">Circuitos</a>
+            <a href="viajes.html" title="Viajes">Viajes</a>
+            <a href="juegos.html" title="Juegos">Juegos</a>
+        </nav>
+    </header>
     <h2>Valtteri Bottas</h2>
 
     <main>
-    <section>
-        <h3>Datos Personales</h3>
-        <p>Nombre Completo: Valtteri Viktor Bottas</p>
-        <p>Dorsal: 77</p>
-        <p>País de Nacimiento: Finlandia</p>
-        <p>Fecha de Nacimiento: 28/08/1989</p>
+        <section>
+            <h3>Datos Personales</h3>
+            <p>Nombre Completo: Valtteri Viktor Bottas</p>
+            <p>Dorsal: 77</p>
+            <p>País de Nacimiento: Finlandia</p>
+            <p>Fecha de Nacimiento: 28/08/1989</p>
 
 
-        <picture>
-            <source media="(max-width: 465px)" srcset="multimedia/imagenes/FotoBottas-150w.png" />
-            <source media="(max-width:799px)" srcset="multimedia/imagenes/FotoBottas-200w.png" />
-            <source media="(min-width:800px)" srcset="multimedia/imagenes/FotoBottas-412w.png" />
-            <img src="multimedia/imagenes/FotoBottas.jpg" alt="Imagen Valtteri Bottas" title="Imagen Valtteri Bottas" />
-        </picture>
-    </section>
+            <picture>
+                <source media="(max-width: 465px)" srcset="multimedia/imagenes/FotoBottas-150w.png" />
+                <source media="(max-width:799px)" srcset="multimedia/imagenes/FotoBottas-200w.png" />
+                <source media="(min-width:800px)" srcset="multimedia/imagenes/FotoBottas-412w.png" />
+                <img src="multimedia/imagenes/FotoBottas.jpg" alt="Imagen Valtteri Bottas"
+                    title="Imagen Valtteri Bottas" />
+            </picture>
+        </section>
 
 
-    <section>
-        <h3>Presentación</h3>
-        <p>Aprendió su oficio en las carreteras finlandesas de hielo y nieve y nació para ser corredor de Grand Prix.
-        </p>
-        <p>Bottas debutó en la F1 con Williams en 2013 y pronto se convirtió en parte de la familia. Los puntos y los
-            podios
-            siguieron,
-            y el confiable piloto incluso acumuló la mayor cantidad de puntos sin una victoria, un récord que le
-            molestaba
-            pero que
-            demostraba su habilidad. El hecho de que el finlandés fuera una máquina de sumar puntos lo llevó de repente
-            a
-            ascender al
-            asiento más codiciado de la F1: el asiento vacante de Nico Rosberg en Mercedes.</p>
-    </section>
+        <section>
+            <h3>Presentación</h3>
+            <p>Aprendió su oficio en las carreteras finlandesas de hielo y nieve y nació para ser corredor de Grand
+                Prix.
+            </p>
+            <p>Bottas debutó en la F1 con Williams en 2013 y pronto se convirtió en parte de la familia. Los puntos y
+                los
+                podios
+                siguieron,
+                y el confiable piloto incluso acumuló la mayor cantidad de puntos sin una victoria, un récord que le
+                molestaba
+                pero que
+                demostraba su habilidad. El hecho de que el finlandés fuera una máquina de sumar puntos lo llevó de
+                repente
+                a
+                ascender al
+                asiento más codiciado de la F1: el asiento vacante de Nico Rosberg en Mercedes.</p>
+        </section>
 
-    <section>
-        <h3>Aficiones</h3>
-        <ul>
-            <li>Hockey</li>
-            <li>Gravel</li>
-            <li>Running</li>
-            <li>Emprendimiento</li>
-            <li>Cocina</li>
-        </ul>
-    </section>
+        <section>
+            <h3>Aficiones</h3>
+            <ul>
+                <li>Hockey</li>
+                <li>Gravel</li>
+                <li>Running</li>
+                <li>Emprendimiento</li>
+                <li>Cocina</li>
+            </ul>
+        </section>
 
-    <section>
-        <h3>Escuderías</h3>
-        <ol>
-            <li>Williams</li>
-            <li>Mercedes</li>
-            <li>Alfa Romeo</li>
-            <li>Kick Sauber</li>
-        </ol>
-    </section>
+        <section>
+            <h3>Escuderías</h3>
+            <ol>
+                <li>Williams</li>
+                <li>Mercedes</li>
+                <li>Alfa Romeo</li>
+                <li>Kick Sauber</li>
+            </ol>
+        </section>
     </main>
     <aside>
         <h3>Conceptos de F1</h3>
@@ -128,7 +132,7 @@
         </dl>
     </aside>
 
-    <main>
+
     <section>
         <h3>Resultados Destacados de los Últimos 3 Años</h3>
         <ul>
@@ -179,7 +183,7 @@
             </tr>
         </table>
     </section>
-    </main>
+
 
     <aside>
         <h3>Referencias Externas</h3>
