--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
     <link rel="icon" href="multimedia/imagenes/favicon.ico" />
 </head>
 
 <body>
     <!-- Datos con el contenido que aparece en el navegador -->
-    <h1>F1 Desktop</h1>
+     <header>
+    <h1><a href="index.html" title="Inicio">F1 Desktop</a></h1>
     <nav>
-        <a href="index.html" title="Inicio">Inicio</a>
+        <a href="index.html" title="Inicio" class="active">Inicio</a>
         <a href="piloto.html" title="Piloto">Piloto</a>
         <a href="noticias.html" title="Noticias">Noticias</a>
         <a href="calendario.html" title="Calendario">Calendario</a>
@@ -27,6 +29,8 @@
         <a href="viajes.html" title="Viajes">Viajes</a>
         <a href="juegos.html" title="Juegos">Juegos</a>
     </nav>
+     </header>
+
     <h2>Inicio</h2>
     <p>En desarrollo</p>
 </body>
