--- a/juegos.html
+++ b/juegos.html
@@ -11,12 +11,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
     <link rel="icon" href="multimedia/imagenes/favicon.ico" />
 </head>
 
 <body>
     <!-- Datos con el contenido que aparece en el navegador -->
-    <h1>F1 Desktop</h1>
+     <header>
+    <h1><a href="index.html" title="Inicio">F1 Desktop</a></h1>
     <nav>
         <a href="index.html" title="Inicio">Inicio</a>
         <a href="piloto.html" title="Piloto">Piloto</a>
@@ -25,8 +27,12 @@
         <a href="meteorologia.html" title="Meteorología">Meteorología</a>
         <a href="circuito.html" title="Circuitos">Circuitos</a>
         <a href="viajes.html" title="Viajes">Viajes</a>
-        <a href="juegos.html" title="Juegos">Juegos</a>
+        <a href="juegos.html" title="Juegos" class="active">Juegos</a>
     </nav>
+     </header>
+
+     <p>Estás en <a href="index.html" title="Inicio">Inicio</a> >> Juegos</p>
+
     <h2>Juegos</h2>
     <p>En desarrollo</p>
 </body>
