--- a/piloto.html
+++ b/piloto.html
@@ -12,16 +12,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
     <link rel="icon" href="multimedia/imagenes/favicon.ico" />
 </head>
 
 <body>
     <!-- Datos con el contenido que aparece en el navegador -->
     <header>
-        <h1>F1 Desktop</h1>
+        <h1><a href="index.html" title="Inicio">F1 Desktop</a></h1>
         <nav>
             <a href="index.html" title="Inicio">Inicio</a>
-            <a href="piloto.html" title="Piloto">Piloto</a>
+            <a href="piloto.html" title="Piloto" class="active">Piloto</a>
             <a href="noticias.html" title="Noticias">Noticias</a>
             <a href="calendario.html" title="Calendario">Calendario</a>
             <a href="meteorologia.html" title="Meteorología">Meteorología</a>
@@ -30,6 +31,10 @@
             <a href="juegos.html" title="Juegos">Juegos</a>
         </nav>
     </header>
+
+    <!-- Migas del documento -->
+    <p>Estás en <a href="index.html" title="Inicio">Inicio</a> >> Piloto</p>
+
     <h2>Valtteri Bottas</h2>
 
     <main>
@@ -90,130 +95,133 @@
                 <li>Kick Sauber</li>
             </ol>
         </section>
+
+
+
+
+        <section>
+            <h3>Resultados Destacados de los Últimos 3 Años</h3>
+            <ul>
+                <li>
+                    2021
+                    <ul>
+                        <li>3er lugar en el Campeonato Mundial de Pilotos</li>
+                        <li>Victoria en el Gran Premio de Turquía</li>
+                        <li>Pole en el Gran Premio de Portugal</li>
+                    </ul>
+                </li>
+                <li>
+                    2022
+                    <ul>
+                        <li>4to lugar en el Capeonato del Mundo de Pilotos</li>
+                        <li>Podia en el Granf Premio de Canadá (3er lugar)</li>
+                    </ul>
+                </li>
+                <li>
+                    2023
+                    <ul>
+                        <li>10º lugar en el Campeonato Mundial de Pilotos</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Tabla de Resultados Temporada 2023</h3>
+
+            <table>
+                <caption>Resultados Temporada 2023</caption>
+                <tr>
+                    <th scope="col" id="Temporada">Temporada</th>
+                    <th scope="col" id="Posición">Posición</th>
+                    <th scope="col" id="Puntos">Puntos</th>
+                    <th scope="col" id="Poles">Poles</th>
+                    <th scope="col" id="Victorias">Victorias</th>
+                    <th scope="col" id="Podios">Podios</th>
+                </tr>
+                <tr>
+                    <th scope="row" id="2023" headers="Temporada">2023</th>
+                    <td headers="2023 Posición">15</td>
+                    <td headers="2023 Puntos">10</td>
+                    <td headers="2023 Poles">0</td>
+                    <td headers="2023 Victorias">0</td>
+                    <td headers="2023 Podios">0</td>
+                </tr>
+            </table>
+        </section>
+
+
+        <aside>
+            <h3>Referencias Externas</h3>
+            <p>
+                <a href="https://www.formula1.com/" title="Formula1.com">Formula1.com</a>
+            </p>
+            <p>
+                <a href="https://www.dazn.com/es-ES/competition/Competition:1m5x4n07f2kqkiczebja5etiq"
+                    title="DAZN">DAZN</a>
+            </p>
+        </aside>
+
+
+        <section>
+            <h3>Contenido Multimedia</h3>
+
+            <video controls>
+                <source src="multimedia/videos/Valtteri_Bottas_Best_Moments_With_Mercedes.mp4" type="video/mp4"
+                    title="Valtteri Bottas' Best Moments With Mercedes">
+                <source src="multimedia/videos/Valtteri_Bottas_Best_Moments_With_Mercedes.webm" type="video/webm"
+                    title="Valtteri Bottas' Best Moments With Mercedes">
+            </video>
+
+            <audio controls>
+                <source src="multimedia/audios/Valtteri_Bottas_told_on_radio_not_to_go_for_the_fastest_lap.mp3"
+                    type="audio/mpeg" title="Valtteri Bottas told on radio not to go for the fastest lap">
+                <source src="multimedia/audios/Valtteri_Bottas_told_on_radio_not_to_go_for_the_fastest_lap.wav"
+                    type="audio/wav" title="Valtteri Bottas told on radio not to go for the fastest lap">
+            </audio>
+        </section>
     </main>
+    
     <aside>
-        <h3>Conceptos de F1</h3>
-        <dl>
-            <dt>Pit Stop</dt>
-            <dd>
-                Parada que realiza un coche durante una carrera para recibir servicios como cambio de neumáticos,
-                repostaje de combustible (en algunas categorías), ajustes mecánicos o reparaciones
-            </dd>
-            <dt>Pole</dt>
-            <dd>
-                Posición de salida más favorable en una carrera de automovilismo, obtenida durante la clasificación.
-                El piloto que consigue la "pole position" tiene el privilegio de iniciar la carrera desde la primera
-                posición en la parrilla
-            </dd>
-            <dt>Efecto Suelo</dt>
-            <dd>
-                Fenómeno aerodinámico que ocurre cuando un vehículo, como un coche de carreras, se acerca al suelo.
-                Al disminuir la distancia entre el vehículo y la superficie, se genera un aumento en la presión del aire
-                debajo del coche, lo que produce un efecto de succión que aumenta la carga aerodinámica y mejora la
-                adherencia
-                de los neumáticos al asfalto
-            </dd>
-            <dt>DRS (Drag Reduction System)</dt>
-            <dd>
-                Sistema que permite a los pilotos ajustar el alerón trasero del coche para reducir la resistencia
-                aerodinámica
-                en ciertas condiciones. Esto facilita los adelantamientos al aumentar la velocidad en rectas, pero solo
-                se
-                puede usar en zonas específicas de la pista y bajo ciertas condiciones.
-            </dd>
-            <dt>Safety Car</dt>
-            <dd>
-                Coche que entra en pista para controlar la carrera en situaciones de peligro, como accidentes o
-                condiciones
-                climáticas adversas. Su presencia obliga a los pilotos a mantener una velocidad reducida y seguir al
-                coche
-                de seguridad, lo que agrupa el pelotón y permite limpiar la pista antes de reanudar la carrera.
-            </dd>
-        </dl>
+    <h3>Conceptos de F1</h3>
+    <dl>
+        <dt>Pit Stop</dt>
+        <dd>
+            Parada que realiza un coche durante una carrera para recibir servicios como cambio de neumáticos,
+            repostaje de combustible (en algunas categorías), ajustes mecánicos o reparaciones
+        </dd>
+        <dt>Pole</dt>
+        <dd>
+            Posición de salida más favorable en una carrera de automovilismo, obtenida durante la clasificación.
+            El piloto que consigue la "pole position" tiene el privilegio de iniciar la carrera desde la primera
+            posición en la parrilla
+        </dd>
+        <dt>Efecto Suelo</dt>
+        <dd>
+            Fenómeno aerodinámico que ocurre cuando un vehículo, como un coche de carreras, se acerca al suelo.
+            Al disminuir la distancia entre el vehículo y la superficie, se genera un aumento en la presión del aire
+            debajo del coche, lo que produce un efecto de succión que aumenta la carga aerodinámica y mejora la
+            adherencia
+            de los neumáticos al asfalto
+        </dd>
+        <dt>DRS (Drag Reduction System)</dt>
+        <dd>
+            Sistema que permite a los pilotos ajustar el alerón trasero del coche para reducir la resistencia
+            aerodinámica
+            en ciertas condiciones. Esto facilita los adelantamientos al aumentar la velocidad en rectas, pero solo
+            se
+            puede usar en zonas específicas de la pista y bajo ciertas condiciones.
+        </dd>
+        <dt>Safety Car</dt>
+        <dd>
+            Coche que entra en pista para controlar la carrera en situaciones de peligro, como accidentes o
+            condiciones
+            climáticas adversas. Su presencia obliga a los pilotos a mantener una velocidad reducida y seguir al
+            coche
+            de seguridad, lo que agrupa el pelotón y permite limpiar la pista antes de reanudar la carrera.
+        </dd>
+    </dl>
     </aside>
-
-
-    <section>
-        <h3>Resultados Destacados de los Últimos 3 Años</h3>
-        <ul>
-            <li>
-                2021
-                <ul>
-                    <li>3er lugar en el Campeonato Mundial de Pilotos</li>
-                    <li>Victoria en el Gran Premio de Turquía</li>
-                    <li>Pole en el Gran Premio de Portugal</li>
-                </ul>
-            </li>
-            <li>
-                2022
-                <ul>
-                    <li>4to lugar en el Capeonato del Mundo de Pilotos</li>
-                    <li>Podia en el Granf Premio de Canadá (3er lugar)</li>
-                </ul>
-            </li>
-            <li>
-                2023
-                <ul>
-                    <li>10º lugar en el Campeonato Mundial de Pilotos</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
-
-    <section>
-        <h3>Tabla de Resultados Temporada 2023</h3>
-
-        <table>
-            <caption>Resultados Temporada 2023</caption>
-            <tr>
-                <th scope="col" id="Temporada">Temporada</th>
-                <th scope="col" id="Posición">Posición</th>
-                <th scope="col" id="Puntos">Puntos</th>
-                <th scope="col" id="Poles">Poles</th>
-                <th scope="col" id="Victorias">Victorias</th>
-                <th scope="col" id="Podios">Podios</th>
-            </tr>
-            <tr>
-                <th scope="row" id="2023" headers="Temporada">2023</th>
-                <td headers="2023 Posición">15</td>
-                <td headers="2023 Puntos">10</td>
-                <td headers="2023 Poles">0</td>
-                <td headers="2023 Victorias">0</td>
-                <td headers="2023 Podios">0</td>
-            </tr>
-        </table>
-    </section>
-
-
-    <aside>
-        <h3>Referencias Externas</h3>
-        <p>
-            <a href="https://www.formula1.com/" title="Formula1.com">Formula1.com</a>
-        </p>
-        <p>
-            <a href="https://www.dazn.com/es-ES/competition/Competition:1m5x4n07f2kqkiczebja5etiq" title="DAZN">DAZN</a>
-        </p>
-    </aside>
-
-
-    <section>
-        <h3>Contenido Multimedia</h3>
-
-        <video controls>
-            <source src="multimedia/videos/Valtteri_Bottas_Best_Moments_With_Mercedes.mp4" type="video/mp4"
-                title="Valtteri Bottas' Best Moments With Mercedes">
-            <source src="multimedia/videos/Valtteri_Bottas_Best_Moments_With_Mercedes.webm" type="video/webm"
-                title="Valtteri Bottas' Best Moments With Mercedes">
-        </video>
-
-        <audio controls>
-            <source src="multimedia/audios/Valtteri_Bottas_told_on_radio_not_to_go_for_the_fastest_lap.mp3"
-                type="audio/mpeg" title="Valtteri Bottas told on radio not to go for the fastest lap">
-            <source src="multimedia/audios/Valtteri_Bottas_told_on_radio_not_to_go_for_the_fastest_lap.wav"
-                type="audio/wav" title="Valtteri Bottas told on radio not to go for the fastest lap">
-        </audio>
-    </section>
-
 </body>
 
 </html>
