Inversión de la Tabla

--- a/piloto.html
+++ b/piloto.html
@@ -133,19 +133,27 @@
                 <caption>Resultados Temporada 2023</caption>
                 <tr>
                     <th scope="col" id="Temporada">Temporada</th>
-                    <th scope="col" id="Posición">Posición</th>
-                    <th scope="col" id="Puntos">Puntos</th>
-                    <th scope="col" id="Poles">Poles</th>
-                    <th scope="col" id="Victorias">Victorias</th>
-                    <th scope="col" id="Podios">Podios</th>
+                    <th scope="col" id="2023">2023</th>
                 </tr>
                 <tr>
-                    <th scope="row" id="2023" headers="Temporada">2023</th>
-                    <td headers="2023 Posición">15</td>
-                    <td headers="2023 Puntos">10</td>
-                    <td headers="2023 Poles">0</td>
-                    <td headers="2023 Victorias">0</td>
-                    <td headers="2023 Podios">0</td>
+                    <th scope="row" id="Posición" headers="Temporada">Posición</th>
+                    <td headers="Posición 2023">15</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="Puntos" headers="Temporada">Puntos</th>
+                    <td headers="Puntos 2023">10</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="Poles" headers="Temporada">Poles</th>
+                    <td headers="Poles 2023">0</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="Victorias" headers="Temporada">Victorias</th>
+                    <td headers="Victorias 2023">0</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="Podios" headers="Temporada">Podios</th>
+                    <td headers="Podios 2023">0</td>
                 </tr>
             </table>
         </section>
