--- a/meteorologia.html
+++ b/meteorologia.html
@@ -37,15 +37,12 @@
     <h2>Meteorología</h2>
     <main>
         <script>
-            document.write("<h2>" + pais.getCountryName() + "</h2>");
+            document.write("<h3>" + pais.getCountryName() + "</h3>");
             document.write("<p>Capital: " + pais.getCapitalName() + "</p>"); 
             document.write(pais.getSecondaryInfo());
-            document.write(pais.writeFinishingLineCoords());
+            pais.writeFinishingLineCoords();
         </script>
     </main>
-    
-
-
 </body>
 
 </html>
