Creacion de html de memoria + estilo

--- a/memoria.html
+++ b/memoria.html
@@ -4,10 +4,10 @@
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
-    <title>Juegos</title>
+    <title>Juego Memoria</title>
     <meta name="author" content="Javier Sanabria Miranda" />
-    <meta name="description" content="Juegos de F1" />
-    <meta name="keywords" content="F1 Desktop" />
+    <meta name="description" content="Juego de Memoria de F1" />
+    <meta name="keywords" content="F1 Desktop, Memoria, Juego" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
@@ -31,14 +31,4 @@
         </nav>
     </header>
 
-    <p>Estás en <a href="index.html" title="Inicio">Inicio</a> >> Juegos</p>
-
-    <h2>Juegos</h2>
-    <main>
-        <nav>
-            <a href="memoria.html" title="Juego Memoria">Juego de Memoria</a>
-        </nav>
-    </main>
-</body>
-
-</html>
+    <p>Estás en <a href="index.html" title="Inicio">Inicio</a> >> <a href="juegos.html" title="Juegos">Juegos</a> >> Juego de Memoria</p>
