--- a/piloto.html
+++ b/piloto.html
@@ -58,21 +58,18 @@
 
         <section>
             <h3>Presentación</h3>
-            <p>Aprendió su oficio en las carreteras finlandesas de hielo y nieve y nació para ser corredor de Grand
+            <p>
+                Aprendió su oficio en las carreteras finlandesas de hielo y nieve y nació para ser corredor de Grand
                 Prix.
             </p>
-            <p>Bottas debutó en la F1 con Williams en 2013 y pronto se convirtió en parte de la familia. Los puntos y
-                los
-                podios
-                siguieron,
-                y el confiable piloto incluso acumuló la mayor cantidad de puntos sin una victoria, un récord que le
-                molestaba
-                pero que
-                demostraba su habilidad. El hecho de que el finlandés fuera una máquina de sumar puntos lo llevó de
-                repente
-                a
-                ascender al
-                asiento más codiciado de la F1: el asiento vacante de Nico Rosberg en Mercedes.</p>
+            <p>
+                Bottas debutó en la F1 con Williams en 2013 y pronto se convirtió en parte de la familia. Los puntos y
+                los podios siguieron, y el confiable piloto incluso acumuló la mayor cantidad de puntos sin una
+                victoria, un récord que le molestaba pero que demostraba su habilidad. El hecho de que el finlandés
+                fuera una máquina de sumar
+                puntos lo llevó de repente a ascender al asiento más codiciado de la F1: el asiento vacante de Nico
+                Rosberg en Mercedes.
+            </p>
         </section>
 
         <section>
@@ -189,46 +186,46 @@
             </audio>
         </section>
     </main>
-    
+
     <aside>
-    <h3>Conceptos de F1</h3>
-    <dl>
-        <dt>Pit Stop</dt>
-        <dd>
-            Parada que realiza un coche durante una carrera para recibir servicios como cambio de neumáticos,
-            repostaje de combustible (en algunas categorías), ajustes mecánicos o reparaciones
-        </dd>
-        <dt>Pole</dt>
-        <dd>
-            Posición de salida más favorable en una carrera de automovilismo, obtenida durante la clasificación.
-            El piloto que consigue la "pole position" tiene el privilegio de iniciar la carrera desde la primera
-            posición en la parrilla
-        </dd>
-        <dt>Efecto Suelo</dt>
-        <dd>
-            Fenómeno aerodinámico que ocurre cuando un vehículo, como un coche de carreras, se acerca al suelo.
-            Al disminuir la distancia entre el vehículo y la superficie, se genera un aumento en la presión del aire
-            debajo del coche, lo que produce un efecto de succión que aumenta la carga aerodinámica y mejora la
-            adherencia
-            de los neumáticos al asfalto
-        </dd>
-        <dt>DRS (Drag Reduction System)</dt>
-        <dd>
-            Sistema que permite a los pilotos ajustar el alerón trasero del coche para reducir la resistencia
-            aerodinámica
-            en ciertas condiciones. Esto facilita los adelantamientos al aumentar la velocidad en rectas, pero solo
-            se
-            puede usar en zonas específicas de la pista y bajo ciertas condiciones.
-        </dd>
-        <dt>Safety Car</dt>
-        <dd>
-            Coche que entra en pista para controlar la carrera en situaciones de peligro, como accidentes o
-            condiciones
-            climáticas adversas. Su presencia obliga a los pilotos a mantener una velocidad reducida y seguir al
-            coche
-            de seguridad, lo que agrupa el pelotón y permite limpiar la pista antes de reanudar la carrera.
-        </dd>
-    </dl>
+        <h3>Conceptos de F1</h3>
+        <dl>
+            <dt>Pit Stop</dt>
+            <dd>
+                Parada que realiza un coche durante una carrera para recibir servicios como cambio de neumáticos,
+                repostaje de combustible (en algunas categorías), ajustes mecánicos o reparaciones
+            </dd>
+            <dt>Pole</dt>
+            <dd>
+                Posición de salida más favorable en una carrera de automovilismo, obtenida durante la clasificación.
+                El piloto que consigue la "pole position" tiene el privilegio de iniciar la carrera desde la primera
+                posición en la parrilla
+            </dd>
+            <dt>Efecto Suelo</dt>
+            <dd>
+                Fenómeno aerodinámico que ocurre cuando un vehículo, como un coche de carreras, se acerca al suelo.
+                Al disminuir la distancia entre el vehículo y la superficie, se genera un aumento en la presión del aire
+                debajo del coche, lo que produce un efecto de succión que aumenta la carga aerodinámica y mejora la
+                adherencia
+                de los neumáticos al asfalto
+            </dd>
+            <dt>DRS (Drag Reduction System)</dt>
+            <dd>
+                Sistema que permite a los pilotos ajustar el alerón trasero del coche para reducir la resistencia
+                aerodinámica
+                en ciertas condiciones. Esto facilita los adelantamientos al aumentar la velocidad en rectas, pero solo
+                se
+                puede usar en zonas específicas de la pista y bajo ciertas condiciones.
+            </dd>
+            <dt>Safety Car</dt>
+            <dd>
+                Coche que entra en pista para controlar la carrera en situaciones de peligro, como accidentes o
+                condiciones
+                climáticas adversas. Su presencia obliga a los pilotos a mantener una velocidad reducida y seguir al
+                coche
+                de seguridad, lo que agrupa el pelotón y permite limpiar la pista antes de reanudar la carrera.
+            </dd>
+        </dl>
     </aside>
 </body>
 
