--- a/juegos.html
+++ b/juegos.html
@@ -37,6 +37,7 @@
     <main>
         <nav>
             <a href="memoria.html" title="Juego Memoria">Juego de Memoria</a>
+            <a href="memoria.html" title="Juego Memoria">Juego de Memoria</a>
         </nav>
     </main>
 </body>
