--- a/index.html
+++ b/index.html
@@ -5,31 +5,35 @@
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
     <title>F1 Desktop</title>
-    <meta name="author" content="Javier Sanabria Miranda"/>
-    <meta name="description" content="Página principal de F1 Desktop"/>
-    <meta name="keywords" content="F1 Desktop"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="author" content="Javier Sanabria Miranda" />
+    <meta name="description" content="Página principal de F1 Desktop" />
+    <meta name="keywords" content="F1 Desktop" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
     <link rel="icon" href="multimedia/imagenes/favicon.ico" />
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="js/fondo.js"></script>
 </head>
 
 <body>
     <!-- Datos con el contenido que aparece en el navegador -->
-     <header>
-    <h1><a href="index.html" title="Inicio">F1 Desktop</a></h1>
-    <nav>
-        <a href="index.html" title="Inicio" class="active">Inicio</a>
-        <a href="piloto.html" title="Piloto">Piloto</a>
-        <a href="noticias.html" title="Noticias">Noticias</a>
-        <a href="calendario.html" title="Calendario">Calendario</a>
-        <a href="meteorologia.html" title="Meteorología">Meteorología</a>
-        <a href="circuito.html" title="Circuitos">Circuitos</a>
-        <a href="viajes.html" title="Viajes">Viajes</a>
-        <a href="juegos.html" title="Juegos">Juegos</a>
-    </nav>
-     </header>
+    <header>
+        <h1><a href="index.html" title="Inicio">F1 Desktop</a></h1>
+        <nav>
+            <a href="index.html" title="Inicio" class="active">Inicio</a>
+            <a href="piloto.html" title="Piloto">Piloto</a>
+            <a href="noticias.html" title="Noticias">Noticias</a>
+            <a href="calendario.html" title="Calendario">Calendario</a>
+            <a href="meteorologia.html" title="Meteorología">Meteorología</a>
+            <a href="circuito.html" title="Circuitos">Circuitos</a>
+            <a href="viajes.html" title="Viajes">Viajes</a>
+            <a href="juegos.html" title="Juegos">Juegos</a>
+        </nav>
+    </header>
 
     <h2>Inicio</h2>
     <p>En desarrollo</p>
