Implementacion Imagen de Fondo Index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     </header>
 
     <h2>Inicio</h2>
-    <p>En desarrollo</p>
+    <script>
+        fondo.getImage()
+    </script>
 </body>
 
 </html>
