--- a/meteorologia.html
+++ b/meteorologia.html
@@ -12,7 +12,10 @@
 
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/article_elements.css" />
     <link rel="icon" href="multimedia/imagenes/favicon.ico" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="js/pais.js"></script>
 </head>
 
@@ -41,6 +44,7 @@
             document.write("<p>Capital: " + pais.getCapitalName() + "</p>");
             document.write(pais.getSecondaryInfo());
             pais.writeFinishingLineCoords();
+            pais.getWeather();
         </script>
     </main>
 </body>
