Cambio a Grid en Meteorología

--- a/meteorologia.html
+++ b/meteorologia.html
@@ -39,6 +39,7 @@
 
     <h2>Meteorología</h2>
     <main>
+        
         <script>
             document.write("<h3>" + pais.getCountryName() + "</h3>");
             document.write("<p>Capital: " + pais.getCapitalName() + "</p>");
@@ -46,6 +47,10 @@
             pais.writeFinishingLineCoords();
             pais.getWeather();
         </script>
+        
+        <!--En esta section se crearán los article con el tiempo previsto-->
+        <section>
+        </section>
     </main>
 </body>
 
