Resolución Warnings Validador
Se han solucionado varios warnings de los validadores así como introducido comentarios para informar del conocimiento acerca de los warnings que no se pueden evitar

--- a/calendario.html
+++ b/calendario.html
@@ -43,7 +43,7 @@
 
         <!--En esta section irán las fechas de las carreras, las introducirá el archivo JS-->
         <section>
-            
+            <h2>Fechas de Carreras</h2>
         </section>
         <script>
             agenda.setButtonAction();
