--- a/meteorologia.html
+++ b/meteorologia.html
@@ -50,6 +50,7 @@
         
         <!--En esta section se crearán los article con el tiempo previsto-->
         <section>
+            <h2>Meteorología Prevista</h2>
         </section>
     </main>
 </body>
