Introducción de h2 en section
Se ha introducido un h2 en el section de noticias para evitar warnings en el validador HTML

--- a/noticias.html
+++ b/noticias.html
@@ -42,7 +42,7 @@
         <p>Introduzca sus noticias desde un archivo de texto:</p>
         <input type="file" onchange="noticias.readInputFile(this.files);" />
         <section>
-
+            <h2>Noticias Disponibles</h2>
         </section>
     </main>
 </body>
